--- a/index.html
+++ b/index.html
@@ -1,299 +1,7 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
-  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" />
-
-  <title>My portfolio</title>
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-
-  <!-- Additional CSS Files -->
-  <link rel="stylesheet" href="assets/css/fontawesome.css" />
-  <link rel="stylesheet" href="assets/css/templatemo-style.css" />
-  <link rel="stylesheet" href="assets/css/owl.css" />
-  <link rel="stylesheet" href="assets/css/lightbox.css" />
-</head>
-
+<html>
 <body>
-  <div id="page-wraper">
-    <div class="responsive-nav">
-      <i class="fa fa-bars" id="menu-toggle"></i>
-      <div id="menu" class="menu">
-        <i class="fa fa-times" id="menu-close"></i>
-        <div class="container">
-          <div class="image">
-            <a href="#"><img src="assets/images/author-image.jpg" alt="" /></a>
-          </div>
-          <div class="author-content">
-            <h4>Gaurang Jain</h4>
-            <span>Computer Science Enthusiast<br>B.Tech[2020-2024]<br>PDPM IIITDMJ</span>
-          </div>
-          <nav class="main-nav" role="navigation">
-            <ul class="main-menu">
-              <li><a href="#section1">About Me</a></li>
-              <li><a href="#section2">What I’m good at</a></li>
-              <li><a href="#section3">My Work</a></li>
-              <li><a href="#section4">Contact Me</a></li>
-            </ul>
-          </nav>
-          <div class="social-network">
-            <ul class="soial-icons">
-              <li>
-                <a href="https://www.facebook.com/gaurang.porwal.9"><i class="fa fa-facebook"></i></a>
-              </li>
-              <li>
-                <a href="https://www.linkedin.com/in/gaurang-jain-0650a21bb"><i class="fa fa-linkedin"></i></a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <section class="section about-me" data-section="section1">
-      <div class="container">
-        <div class="section-heading">
-          <h2>About Me</h2>
-          <div class="line-dec"></div>
-          <span>
-            <h4>Hi,I'm Gaurang Jain.</h4><br><br>I am currently a B.tech freshie in Computer Science and Engineering at
-            PDPM
-            Indian Institute of Information Technology,Design and Manufacturing,Jabalpur.<br><br>I love to explore
-            different fields of engineering and I am interested in every field of Engineering.<br><br>I am currently
-            exploring different fields like Web development,App development,Game development,Electronics,IOT,Competitive
-            coding.<br><br>I also very much interested in adventure sports and always ready to go on adventure.
-          </span>
-
-        </div>
-    </section>
-
-    <section class="section my-services" data-section="section2">
-      <div class="container">
-        <div class="section-heading">
-          <h2>What I’m good at?</h2>
-          <div class="line-dec"></div>
-          <span>I am Currently exploring various fields
-            and learning about various skills.</span>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="service-item">
-              <div class="first-service-icon service-icon"></div>
-              <h4>Communication Skills</h4>
-              <p>
-                I have good communication skills and also good in speaking english.<br>I am effective in a group.
-              </p>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="service-item">
-              <div class="second-service-icon service-icon"></div>
-              <h4>Competitive coding</h4>
-              <p>
-                I also have good knowledge about C and C++ programming language.<br> also knows basics of python.<br>I
-                am also doing competitive programming on CODECHEF(Currently having 2*(beginner)).
-              </p>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="service-item">
-              <div class="third-service-icon service-icon"></div>
-              <h4>Technical Skills</h4>
-              <p>
-                I have good command over Blender which is a 3D-Modelling and Game development software.<br>I also have a
-                basic knowledge of Arduino and electronics.<br>I also love to read Technology related articles.<br>I
-                love to build custom PCs as I made my own custom desktop.<br>
-              </p>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="service-item">
-              <div class="fourth-service-icon service-icon"></div>
-              <h4>Managing Resources</h4>
-              <p>
-                I am good at Managing human resources as well as technical resources.<br>I can effectively manage a team
-                and can give best results.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="section my-work" data-section="section3">
-      <div class="container">
-        <div class="section-heading">
-          <h2>My Work and Ongoing Projects</h2>
-          <div class="line-dec"></div>
-          <span></span>
-        </div>
-        <div class="row">
-          <div class="isotope-wrapper">
-            <div class="isotope-box">
-              <div class="isotope-item">
-                <figure class="snip1321">
-                  <img src="assets/images/portfolio-01.jpg" alt="sq-sample26" />
-                  <figcaption>
-                    <a href="assets/images/portfolio-01.jpg" data-lightbox="image-1" data-title="Caption"><i
-                        class="fa fa-search"></i></a>
-                    <h4>Virtual Campus @ IIITians Network</h4>
-                    <span>At the IIItians network,we are currently working on a TPP and FPP shooting game with a
-                      futuristic cyborg robot as a leading character,the game consists of maps and structures of various
-                      IIITs.</span>
-                  </figcaption>
-                </figure>
-              </div>
-
-              <div class="isotope-item">
-                <figure class="snip1321">
-                  <img src="assets/images/portfolio-02.png" alt="sq-sample26" />
-                  <figcaption>
-                    <a href="assets/images/portfolio-02.png" data-lightbox="image-1" data-title="Caption"><i
-                        class="fa fa-search"></i></a>
-                    <h4>Data Heist Website @ IIITians Network</h4>
-                    <span>Currently working in Backend-team.We are making a full fledge and functional website where
-                      various hackathons and various competitive events like CTF,Competitive coding will be organised
-                      similar to sites like
-                      Codechef,Codeforces,Hack this site,Google Gruyere,Hackthis!!.It will help to increase the culture
-                      and environment of
-                      competitive coding and hacking competitions in various institutes of India.</span>
-                  </figcaption>
-                </figure>
-              </div>
-
-              <div class="isotope-item">
-                <figure class="snip1321">
-                  <img src="assets/images/portfolio-03.jpg" alt="sq-sample26" />
-                  <figcaption>
-                    <a href="assets/images/portfolio-03.jpg" data-lightbox="image-1" data-title="Caption"><i
-                        class="fa fa-search"></i></a>
-                    <h4>The Network App @ IIITians Network</h4>
-                    <span>This is app which is in the building stage which will help to effectively manage diffeernt
-                      members of IIITians network and will help in the proper and effective functioning of the
-                      network.It will help in effecetive time and resource management of the members.</span>
-                  </figcaption>
-                </figure>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="section contact-me" data-section="section4">
-      <div class="container">
-        <div class="section-heading">
-          <h2>Contact Me</h2>
-          <div class="line-dec"></div>
-          <span>Get in touch by filling the form below,or simply mail me at 20BCS086@iiitdmj.ac.in.</span>
-        </div>
-        <div class="row">
-          <div class="right-content">
-            <div class="container">
-              <form id="contact" action="" method="post">
-                <div class="row">
-                  <div class="col-md-6">
-                    <fieldset>
-                      <input name="name" type="text" class="form-control" id="name" placeholder="Your name..."
-                        required="" />
-                    </fieldset>
-                  </div>
-                  <div class="col-md-6">
-                    <fieldset>
-                      <input name="email" type="text" class="form-control" id="email" placeholder="Your email..."
-                        required="" />
-                    </fieldset>
-                  </div>
-                  <div class="col-md-12">
-                    <fieldset>
-                      <input name="subject" type="text" class="form-control" id="subject" placeholder="Subject..."
-                        required="" />
-                    </fieldset>
-                  </div>
-                  <div class="col-md-12">
-                    <fieldset>
-                      <textarea name="message" rows="6" class="form-control" id="message" placeholder="Your message..."
-                        required=""></textarea>
-                    </fieldset>
-                  </div>
-                  <div class="col-md-12">
-                    <fieldset>
-                      <button type="submit" id="form-submit" class="button">
-                        Send Message
-                      </button>
-                    </fieldset>
-                  </div>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-  </div>
-
-
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  <script src="assets/js/isotope.min.js"></script>
-  <script src="assets/js/owl-carousel.js"></script>
-  <script src="assets/js/lightbox.js"></script>
-  <script src="assets/js/custom.js"></script>
-  <script>
-
-    $(".main-menu li:first").addClass("active");
-
-    var showSection = function showSection(section, isAnimate) {
-      var direction = section.replace(/#/, ""),
-        reqSection = $(".section").filter(
-          '[data-section="' + direction + '"]'
-        ),
-        reqSectionPos = reqSection.offset().top - 0;
-
-      if (isAnimate) {
-        $("body, html").animate(
-          {
-            scrollTop: reqSectionPos
-          },
-          800
-        );
-      } else {
-        $("body, html").scrollTop(reqSectionPos);
-      }
-    };
-
-    var checkSection = function checkSection() {
-      $(".section").each(function () {
-        var $this = $(this),
-          topEdge = $this.offset().top - 80,
-          bottomEdge = topEdge + $this.height(),
-          wScroll = $(window).scrollTop();
-        if (topEdge < wScroll && bottomEdge > wScroll) {
-          var currentId = $this.data("section"),
-            reqLink = $("a").filter("[href*=\\#" + currentId + "]");
-          reqLink
-            .closest("li")
-            .addClass("active")
-            .siblings()
-            .removeClass("active");
-        }
-      });
-    };
-
-    $(".main-menu").on("click", "a", function (e) {
-      e.preventDefault();
-      showSection($(this).attr("href"), true);
-    });
-
-    $(window).scroll(function () {
-      checkSection();
-    });
-  </script>
+<h1>Porn links</h1>
+<p>Agli baar link dunga</p>
 </body>
-
-</html>
+<html>
