--- a/index.html
+++ b/index.html
@@ -2,28 +2,22 @@
 <html>
 <body>
 <h1>Porn links</h1>
-<p>289 GB link</p>
-<p>https://mega.nz/folder/j5dURCAQ#PNrPT7kRoybK0bbMO_LwDw</p>
-<p>Lena Paul Onlyfans Collection</p>
-<p>https://mega.nz/#F!aL5wGSpD!NN_ThrQFYJg8fljnMEaHxA!WO5SCKrQ</p>
-<p>Karley OnlyFans Collection</p>
-<p>https://mega.nz/folder/7UsSUArT#dj7vwUw6L2kyo0zBY0gV3A</p>
-<p>Jordan Carver Collection</p>
-<p>https://mega.nz/folder/yi5wRIpI#F4PxoXVDd5zgqNDn8q9yMw</p>
-<p>Kendra Sunderland Collection</p>
-<p>https://xpshort.com/WFzqd</p>
-<p>Riley Reid Collection</p>
-<p>https://mega.nz/folder/SGRFlaiT#0m7OsU5YnJomNNpWE5uFQg</p>
-<p>Antoniaella Onlyfans Collection</p>
-<p>https://mega.nz/folder/T1tE3A5T#j-0IwIYZIAa2op5EekQE6Q</p>
-<p>Mira Patel Onlyfans Collection</p>
-<p>https://mega.nz/folder/2PgHFJAY#DxjREJF-QK2h4iqdi4ImSA</p>
-<p>Autumn Falls Onlyfans Collection</p>
-<p>https://mega.nz/folder/iZhHSSIJ#1xHBs1o2pNcsFigf8RlFMA</p>
-<p>All indian Stuff Desi💦</p>
-<p>https://mega.nz/folder/PnJR0IhK#ZRrvH_TXfzyVgnm9yAujoQ</p>
-<p>Katrina Jade Onlyfans Collectiom</p>
-<p>https://mega.nz/folder/7qQHRSSK#lm9zrviXrNECT-Ur9_YsKA </p>
+<a href="https://mega.nz/folder/j5dURCAQ#PNrPT7kRoybK0bbMO_LwDw" target="_blank">289 GB link</a> 
+<a href="https://mega.nz/#F!aL5wGSpD!NN_ThrQFYJg8fljnMEaHxA!WO5SCKrQ" target="_blank">Lena Paul Onlyfans Collection</a> 
+<a href="https://mega.nz/folder/7UsSUArT#dj7vwUw6L2kyo0zBY0gV3A" target="_blank">Karley OnlyFans Collection</a> 
+<a href="https://mega.nz/folder/yi5wRIpI#F4PxoXVDd5zgqNDn8q9yMw" target="_blank">Jordan Carver Collection</a> 
+<a href="https://xpshort.com/WFzqd" target="_blank">Kendra Sunderland Collection</a> 
+<a href="https://mega.nz/folder/SGRFlaiT#0m7OsU5YnJomNNpWE5uFQg" target="_blank">Riley Reid Collection</a> 
+<a href="https://mega.nz/folder/T1tE3A5T#j-0IwIYZIAa2op5EekQE6Q" target="_blank">Antoniaella Onlyfans Collection</a> 
+<a href="https://mega.nz/folder/2PgHFJAY#DxjREJF-QK2h4iqdi4ImSA" target="_blank">Mira Patel Onlyfans Collection</a> 
+<a href="https://mega.nz/folder/iZhHSSIJ#1xHBs1o2pNcsFigf8RlFMA" target="_blank">Autumn Falls Onlyfans Collection</a> 
+<a href="https://mega.nz/folder/PnJR0IhK#ZRrvH_TXfzyVgnm9yAujoQ" target="_blank">All indian Stuff Desi💦</a> 
+<a href="https://mega.nz/folder/7qQHRSSK#lm9zrviXrNECT-Ur9_YsKA" target="_blank">Katrina Jade Onlyfans Collectiom</a> 
+<a href="www.xvideos5.co," target="_blank">Xvideos</a> 
+<a href="www.xhamster.com" target="_blank">xhamster</a> 
+<a href="www.pornhub.com" target="_blank">Pornhub</a> 
+<p>Naughty America ki aukat nahi hai aapki</p>
 <h2>Hamse jude rahne ke liye dhanyvaad🙏</h2>
+<h3>In sabke badle kuch nahi chahiye bas dua kro ek ladki mil jaye muje</h3>
 </body>
 <html>
