--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Brij's First Website</title>
+</head>
 <body>
-<h1>Beta Porn dekhna buri baat hai</h1>
+    <h1>Birju Siyag</h1>
+    <p>This is my first Website in html</p>
+    <hr>
+    <img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" alt="Tree" width="500"><br>
+    <a href="https://www.google.com">Google</a><br>
+    <a href="/about.html">About</a><br>
+    <a href="/Contact.html">Contact Me</a><br><hr>
+    <b>This is bold text</b><br>
+    <i>This is italic text</i>
 </body>
-<html>
+</html>
