--- a/about.html
+++ b/about.html
@@ -7,6 +7,10 @@
     <title>About</title>
 </head>
 <body>
-    <h1>Hii my name is brijmohan siyag</h1>
+    <a href="index.html"><h1>Government Senior Secondary School, INANA, MUNDWA</h1></a> 
+    <big>Official Web Portal</big>
+    <hr>
+    <h1>An educational agency established by government of Rajasthan for purpose that every children in village should be litrate</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate consequuntur itaque repellendus fugiat voluptate omnis aliquid reprehenderit voluptatibus tenetur maiores, reiciendis incidunt, soluta explicabo repudiandae necessitatibus quia culpa, assumenda ut earum nobis doloremque eum vel architecto? Deleniti quaerat sit animi, quae iste eaque repellendus cupiditate nesciunt odit id autem aliquid perferendis sint odio at quisquam soluta architecto sequi similique ratione voluptatum voluptatibus a maiores. Eligendi est a doloremque in nam, voluptatem nisi debitis distinctio ducimus illo architecto adipisci maiores nihil inventore. Neque, harum sit doloribus illum in minus voluptatem sequi excepturi maxime eius quia aut adipisci? Sunt esse architecto fugiat?</p>
 </body>
 </html>
