--- a/index.html
+++ b/index.html
@@ -1,20 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brij's First Website</title>
 </head>
+
 <body>
-    <h1>Birju Siyag</h1>
-    <p>This is my first Website in html</p>
+    <a href="/Web/index.html">
+        <h1>Government Senior Secondary School, INANA, MUNDWA</h1>
+    </a>
+    <big>Official Web Portal</big>
     <hr>
-    <img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885_1280.jpg" alt="Tree" width="400"><br>
-    <a href="https://www.google.com">Google</a><br>
-    <a href="/about.html">About</a><br>
-    <a href="/Contact.html">Contact Me</a><br><hr>
-    <b>This is bold text</b><br>
-    <i>This is italic text</i>
+    <span>
+        <span>
+            <img
+                    src="https://timesofindia.indiatimes.com/thumb/msid-69685642,imgsize-96438,width-400,resizemode-4/69685642.jpg"
+                    alt="Class Room" width="400"> <img
+                    src="https://cdn.dnaindia.com/sites/default/files/styles/full/public/2018/03/17/661612-jaipur-govt-school.jpg"
+                    alt="Class Room" width="400"><img
+                    src="https://images.hindustantimes.com/rf/image_size_630x354/HT/p2/2019/02/21/Pictures/happiness-classes_1ef296a8-3599-11e9-9527-26b2d5de00dc.jpg"
+                    alt="Class Room" width="400">
+        </span>
+        <br>
+        <div>
+            <h2>Number of stalf members - 20</h2>
+            <h2>Number of Total Students - 200</h2>
+        </div>
+        <div>
+            <h1>For Admissions <a href="login.html">click here</a></h1>
+        </div>
+        <div>
+            <ul>
+                <li>
+                    <button>
+                        <a href="/about.html">About</a>
+                    </button>
+                </li>
+                <li>
+                    <button>
+                        <a href="https://www.google.com/maps/place/Government+Sr.+Sec+School,+Inana/@27.132522,73.8235811,17z/data=!3m1!4b1!4m5!3m4!1s0x396a8d3bde23e3ff:0xc90a2ec16332c035!8m2!3d27.1324552!4d73.8257786"
+                            target="_main">Address</a>
+                    </button>
+                </li>
+                <li>
+                    <button>
+                        <a href="/Contact.html">Contact Us</a>
+                    </button>
+                </li>
+                <br>
+            </ul>
+        </div>
+    </span>
 </body>
+
 </html>
