--- a/login.html
+++ b/login.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact me</title>
+    <title>login</title>
 </head>
 <body>
     <a href="index.html"><h1>Government Senior Secondary School, INANA, MUNDWA</h1></a> 
     <big>Official Web Portal</big>
-    <hr>
-    <h1>For offical purposes you can contact .......................................</h1>
+    <br><br>
+    <div>
+        <span>Enter your School ID:</span>
+        <input type="id">
+        <br>
+        <span>Enter your Password:</span>
+        <input type="password" name="" id="">
+        <br><br>
+        <button>
+            <a href="reg.html">Login</a>
+        </button>
+    </div>
 </body>
 </html>
