--- a/sucreg.html
+++ b/sucreg.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact me</title>
+    <title>Regestration Succesfull</title>
 </head>
 <body>
     <a href="index.html"><h1>Government Senior Secondary School, INANA, MUNDWA</h1></a> 
-    <big>Official Web Portal</big>
-    <hr>
-    <h1>For offical purposes you can contact .......................................</h1>
+    <big>Official Web Portal</big><br><br>
+    <span>
+        <big>
+            <big>
+                Regestration Succesfull!!
+            </big>
+        </big>
+    </span>
+    <br><br>
+    <span>
+        <a href="index.html">click here</a> to return main site
+    </span>
 </body>
 </html>
