--- a/sucreg.html
+++ b/sucreg.html
@@ -12,7 +12,7 @@
     <span>
         <big>
             <big>
-                Regestration Succesfull!!
+                Registration Successfull!!
             </big>
         </big>
     </span>
