--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
         <span>
             <img
                     src="https://timesofindia.indiatimes.com/thumb/msid-69685642,imgsize-96438,width-400,resizemode-4/69685642.jpg"
-                    alt="Class Room" width="400"> <img
+                    alt="Class Room" width="400"> 
+                    <img
                     src="https://cdn.dnaindia.com/sites/default/files/styles/full/public/2018/03/17/661612-jaipur-govt-school.jpg"
-                    alt="Class Room" width="400"><img
+                    alt="Class Room" width="400">
+                    <img
                     src="https://images.hindustantimes.com/rf/image_size_630x354/HT/p2/2019/02/21/Pictures/happiness-classes_1ef296a8-3599-11e9-9527-26b2d5de00dc.jpg"
                     alt="Class Room" width="400">
         </span>
