--- a/login.html
+++ b/login.html
@@ -10,16 +10,17 @@
     <a href="index.html"><h1>Government Senior Secondary School, INANA, MUNDWA</h1></a> 
     <big>Official Web Portal</big>
     <br><br>
+    <big>
     <div>
-        <span>Enter your School ID:</span>
-        <input type="id">
+        <form action="reg.html">
+        <span>Enter your School ID* :</span>
+        <input type="text" id="username" name="username" placeholder="username" required>
         <br>
-        <span>Enter your Password:</span>
-        <input type="password" name="" id="">
-        <br><br>
-        <button>
-            <a href="reg.html">Login</a>
-        </button>
+        <span>Enter your Password* :</span>
+        <input type="text" id="username" name="username" placeholder="password" required><br>
+        <input type="submit" placeholder="Login" >
+    </form>
     </div>
+    </big>
 </body>
 </html>
