--- a/sucreg.html
+++ b/sucreg.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Regestration Succesfull</title>
+    <title>Registration Successfull</title>
 </head>
 <body>
     <a href="index.html"><h1>Government Senior Secondary School, INANA, MUNDWA</h1></a> 
