--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
         <input type="text" id="username" name="username" placeholder="username" required>
         <br>
         <span>Enter your Password* :</span>
-        <input type="text" id="username" name="username" placeholder="password" required><br>
+        <input type="password" id="username" name="username" placeholder="password" required><br>
         <input type="submit" placeholder="Login" >
     </form>
     </div>
