--- a/reg.html
+++ b/reg.html
@@ -24,8 +24,8 @@
                 <input type="Name" required><br><br>
                 <span>Mother's Name* :-</span>
                 <input type="Name" required><br><br>
-                <span>Address* :-</span>
-                <input type="Name" required><br><br>
+                <span>Address* :-</span><br>
+                <textarea name="address" id="" cols="30" rows="5"></textarea><br>
                 <span>Select your Class* </span><br>
                 <label for="sectionida">
                     <input type="radio" value="10th" name="section" id="sectionida" required> 10th
