--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="first.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,10 +10,10 @@
 </head>
 
 <body>
-    <a href="/Web/index.html">
-        <h1>Government Senior Secondary School, INANA, MUNDWA</h1>
+    <a href="index.html">
+        <h1 class="mid">Government Senior Secondary School, INANA, MUNDWA</h1>
     </a>
-    <big>Official Web Portal</big>
+    <pre class="lam">Official Web Portal</pre>
     <hr>
     <span>
         <span>
