--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -12,7 +12,7 @@
 
 </header>
 
-<body style="background-color: rgb(181, 255, 251);">
+<body style="background-color: rgb(255, 238, 238);">
     <img class="centre" src="images/Image1.png" width="200" alt="profilepic">
     <h1 class="name">Brijmohan Siyag</h1>
     <p class="font15">Competitive Programmer and Web Developer</p>
@@ -20,7 +20,7 @@
     <p style="font-size: 25pt;color: rgb(0, 0, 0);text-align: center;">at</p>
     <p class="font15"> Indian Institute of Information Technology and Design Manufacturing, Jabalpur</p>
     <hr size="3px" color="black">
-    <table>
+    <table cellspacing="50">
         <tr>
             <td style="width: 60%;">
                 <img src="images/certificate.jpeg" alt="certificate">
