--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -12,14 +12,14 @@
 
 </header>
 
-<body style="background-color: rgb(255, 238, 238);">
+<body style="background-color: #EAF6F6;">
     <img class="centre" src="images/Image1.png" width="200" alt="profilepic">
     <h1 class="name">Brijmohan Siyag</h1>
-    <p class="font15">Competitive Programmer and Web Developer</p>
-    <p class="font15">Pursuing Btech in <strong>Comupter Science and Engineering </strong></p>
-    <p style="font-size: 25pt;color: rgb(0, 0, 0);text-align: center;">at</p>
-    <p class="font15"> Indian Institute of Information Technology and Design Manufacturing, Jabalpur</p>
-    <hr size="3px" color="black">
+    <p class="font15" style="color: rgb(57, 153, 105);">Competitive Programmer and Web Developer</p>
+    <p class="font15" style="color: rgb(76, 117, 117);">Pursuing Btech in <strong>Comupter Science and Engineering </strong></p>
+    <p style="font-size: 25pt;color: rgb(0, 0, 0);text-align: center;color: rgb(76, 117, 117);">at</p>
+    <p class="font15" style="color: rgb(76, 117, 117);"> Indian Institute of Information Technology and Design Manufacturing, Jabalpur</p>
+    <hr>
     <table cellspacing="50">
         <tr>
             <td style="width: 60%;">
@@ -27,7 +27,7 @@
             </td>
             <td>
                 <div>
-                    <p style="text-align: center;">Eager to look into following Computer Science Fields</p>
+                    <h3 style="text-align: center;color: rgb(65, 163, 163);">Eager to look into following Computer Science Fields</h3>
                     <ul>
                         <li>
                             <strong>
@@ -49,7 +49,7 @@
                     </ul>
                 </div>
                 <div>
-                    <p>Projects</p>
+                    <h3 style="text-align: center;color: rgb(65, 163, 163);">Projects</h3>
                     <ul>
                         <li>
                             Youtube Video Downloader
@@ -68,7 +68,7 @@
             </td>
         </tr>
     </table>
-    <br><br><br><br>
+    <br><br><hr><br><br>
     <!-- <table>
         <tr>
             <td style="width: 30%;">
@@ -81,43 +81,70 @@
         </tr>
     </table> -->
     <br><br>
-    <p style="font-size: 30pt;text-align: center;"><strong>Programming Skills</strong></p>
+    <h3 style="font-size: 30pt;text-align: center;color: rgb(65, 163, 163);"><strong>Programming Skills</strong></h3>
     <div>
         <li>C plus plus ⭐️⭐️⭐️⭐️⭐️</li>
         <li>Data structure ⭐️⭐️⭐️⭐️</li>
         <li>Algorithm ⭐️⭐️⭐️⭐️</li>
         <li>C ⭐️⭐️⭐️⭐</li>
         <li>Python ⭐️</li>
-        <p><strong>Other Skills</strong></p>
+        <h3 style="color: rgb(65, 163, 163);"><strong>Other Skills</strong></h3>
         <li>Adobe Photoshop ⭐️⭐️⭐️⭐️</li>
         <li>Cinema 4D ⭐️⭐️⭐️⭐️</li>
         <li>Adobe Premier Pro ⭐️⭐️⭐️⭐️</li>
         <li>Adobe After Effects ⭐️⭐️⭐️⭐️</li>
     </div>
+    <div>
+        <!-- <p style="color: rgb(65, 163, 163);">Contact Me</p> -->
+        <!-- <form action="mailto:brijsiyag@gmail.com" method="POST" enctype="text/plain">
+            <table>
+                <tr>
+                    <td><label>Name :</label></td>
+                    <td><input type="text" name="Your Name " id="name"></td>
+                </tr>
+                <tr>
+                    <td><label>Email :</label></td>
+                    <td><input type="email" name="Your Email "></td>
+                </tr>
+                <tr>
+                    <td><label for="Your Messege">Your Massege</label></td>
+                    <td><textarea name="Your Messege" id="" cols="30" rows="10"></textarea></td>
+                </tr>
+                <tr>
+                    <td><input type="submit"></td>
+                </tr>
+            </table>
+        </form> -->
+    </div>
 </body>
 <footer>
     <p>
-        <hr size="3px" color="black">
+        <hr>
     </p>
     <div>
         <table style="display: flex;align-items: center;justify-content: center;">
             <tr>
                 <td style="width: 80px;">
-                    <a href="https://www.linkedin.com/in/brijsiyag/" target="_blank"> <img src="images/linkedin.png" alt="linkedin" style="width:50px;"></a>
+                    <a href="https://www.linkedin.com/in/brijsiyag/" target="_blank"> <img src="images/linkedin.png"
+                            alt="linkedin" style="width:50px;"></a>
                 </td>
                 <td style="width: 70px;">
-                    <a href="https://www.facebook.com/parkashram.siyag/" target="_blank"><img src="images/fb.webp" alt="facebook" style="width:50px;"></a>
+                    <a href="https://www.facebook.com/parkashram.siyag/" target="_blank"><img src="images/fb.webp"
+                            alt="facebook" style="width:50px;"></a>
                 </td>
                 <td style="width: 80px;">
-                    <a href="https://www.instagram.com/birjusiyag/" target="_blank"><img src="images/Instagram.png" alt="Instagram" style="width:70px;"></a>
+                    <a href="https://www.instagram.com/birjusiyag/" target="_blank"><img src="images/Instagram.png"
+                            alt="Instagram" style="width:70px;"></a>
                 </td>
                 <td style="width: 80px;">
-                    <a href="https://twitter.com/BrijSiyag" target="_blank"><img src="images/Twitter.png" alt="Twitter" style="width:70px;"></a>
+                    <a href="https://twitter.com/BrijSiyag" target="_blank"><img src="images/Twitter.png" alt="Twitter"
+                            style="width:70px;"></a>
                 </td>
                 <td style="width: 70px;">
-                    <a href="https://www.reddit.com/user/Birjusiyag" target="_blank"><img src="images/reddit.webp" alt="reddit" style="width:50px;"></a>
+                    <a href="https://www.reddit.com/user/Birjusiyag" target="_blank"><img src="images/reddit.webp"
+                            alt="reddit" style="width:50px;"></a>
                 </td>
-                
+
             </tr>
         </table>
     </div>
