--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -13,7 +13,7 @@
 </header>
 
 <body style="background-color: #EAF6F6;">
-    <img class="centre" src="images/Image1.png" width="200" alt="profilepic">
+    <img class="centre" src="images/image1.png" width="200" alt="profilepic">
     <h1 class="name">Brijmohan Siyag</h1>
     <p class="font15" style="color: rgb(57, 153, 105);">Competitive Programmer and Web Developer</p>
     <p class="font15" style="color: rgb(76, 117, 117);">Pursuing Btech in <strong>Comupter Science and Engineering </strong></p>
@@ -137,7 +137,7 @@
                             alt="Instagram" style="width:70px;"></a>
                 </td>
                 <td style="width: 80px;">
-                    <a href="https://twitter.com/BrijSiyag" target="_blank"><img src="images/Twitter.png" alt="Twitter"
+                    <a href="https://twitter.com/BrijSiyag" target="_blank"><img src="images/twitter.png" alt="Twitter"
                             style="width:70px;"></a>
                 </td>
                 <td style="width: 70px;">
