--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="favicon" href="images/favicon.ico">
     <link rel="stylesheet" href="basic.css">
     <title>Brij's Portfolio</title>
 </head>
@@ -13,7 +14,7 @@
 </header>
 
 <body style="background-color: #EAF6F6;">
-    <img class="centre" src="images/image1.png" width="200" alt="profilepic">
+    <img class="centre" src="images/image1.png" width="500px" alt="profilepic">
     <h1 class="name">Brijmohan Siyag</h1>
     <p class="font15" style="color: rgb(57, 153, 105);">Competitive Programmer and Web Developer</p>
     <p class="font15" style="color: rgb(76, 117, 117);">Pursuing Btech in <strong>Comupter Science and Engineering </strong></p>
@@ -116,38 +117,40 @@
             </table>
         </form> -->
     </div>
+    <!-- the DIV that will contain the widget -->
+<div class="weatherWidget" ></div>
 </body>
 <footer>
     <p>
         <hr>
     </p>
-    <div>
+    <div">
         <table style="display: flex;align-items: center;justify-content: center;">
             <tr>
                 <td style="width: 80px;">
-                    <a href="https://www.linkedin.com/in/brijsiyag/" target="_blank"> <img src="images/linkedin.png"
-                            alt="linkedin" style="width:50px;"></a>
+                    <a href="https://www.linkedin.com/in/brijsiyag/" target="_blank"> <img class="ho" src="images/linkedin.png"
+                            alt="linkedin"></a>
                 </td>
                 <td style="width: 70px;">
-                    <a href="https://www.facebook.com/parkashram.siyag/" target="_blank"><img src="images/fb.webp"
-                            alt="facebook" style="width:50px;"></a>
+                    <a href="https://www.facebook.com/parkashram.siyag/" target="_blank"><img class="ho" src="images/fb.webp"
+                            alt="facebook"></a>
                 </td>
                 <td style="width: 80px;">
-                    <a href="https://www.instagram.com/birjusiyag/" target="_blank"><img src="images/Instagram.png"
-                            alt="Instagram" style="width:70px;"></a>
+                    <a href="https://www.instagram.com/birjusiyag/" target="_blank"><img class="ho1" src="images/Instagram.png"
+                            alt="Instagram"></a>
                 </td>
                 <td style="width: 80px;">
-                    <a href="https://twitter.com/BrijSiyag" target="_blank"><img src="images/twitter.png" alt="Twitter"
-                            style="width:70px;"></a>
+                    <a href="https://twitter.com/BrijSiyag" target="_blank"><img width="80px" class="ho1" src="images/twitter.png"  alt="Twitter"
+                        ></a>
                 </td>
                 <td style="width: 70px;">
-                    <a href="https://www.reddit.com/user/Birjusiyag" target="_blank"><img src="images/reddit.webp"
-                            alt="reddit" style="width:50px;"></a>
+                    <a href="https://www.reddit.com/user/Birjusiyag" target="_blank"><img class="ho" src="images/reddit.webp"
+                            alt="reddit"></a>
                 </td>
-
             </tr>
         </table>
     </div>
+    <p style="text-align: center;margin:0 0 0 0;">©brijsiyag <br> all rights reserved</p>
 </footer>
 
 </html>
