--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <a href="Portfolio/index.html">Portfolio</a>
     <a href="School/index.html">School</a>
+    <a href="Advanced-Portfolio/index.html">Advanced-Portfolio</a>
 </body>
 </html>
